--- a/GPSTest/proguard.cfg
+++ b/GPSTest/proguard.cfg
@@ -39,6 +39,7 @@
 -dontwarn **AccessibilityServiceInfoCompatJellyBeanMr2
 -dontwarn android.support.v4.view.**
 -dontwarn android.support.v4.media.**
+-dontwarn com.actionbarsherlock.internal.**
 -keep class android.support.v4.** { *; }
 -keepattributes *Annotation*
 -keep public class * extends android.view.View
