Fix debug signing when the "secure.properties" file exists.

--- a/GPSTest/build.gradle
+++ b/GPSTest/build.gradle
@@ -17,7 +17,7 @@ android {
 
         signingConfigs {
             debug {
-                // Nothing here
+                storeFile file("gpstest.debug.keystore")
             }
 
             release {
