Fix #31 - Rotate map display with compass.  Squashed commit of the following:
commit 50987604b7bd423329a0f4a74b33e4c009eee589
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Thu Jan 23 21:42:12 2014 -0500

    Update to #31 - add preferences for controlling the map based on compass and sensors (tilt).  Some code cleanup and refactoring.

commit 20aa083960eb3479a2832f6ca91257eced20a472
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Thu Jan 23 12:42:20 2014 -0500

    Update to #31 - add NaN check for tilt, since on older phones without the modern rotation vector sensors this could happen.

commit b557ad0b4fa8ca4360cb1bbe2425dcff705a0201
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Thu Jan 23 12:27:14 2014 -0500

    Update to #31 - add listener to "My Location" button, and temporarily disengage map control based on touch on this button as well (button functions as normal now as well).

commit d0bdf39bf8de61d335a1d4dfe42b3e0e35c0c649
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Thu Jan 23 12:16:16 2014 -0500

    Update to #31 - fix map camera so sensor-based movements continue after orientation change.

commit 8ec2d9f19cc6783cfcd31b2dbca7c38ea88b061e
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Tue Jan 21 22:25:15 2014 -0500

    Update to #31 - Change map orientation and tilt based on sensor data.  Also allows the user to tap on the map (long or short) to temporarily exit the automatic map control and manually scroll the map.  Automatic map movements will kick back in after approx. 5 seconds of inactivity.

commit b09800d3d7f84e2bd52c49a3ce023c9733cbedf0
Author: Sean Barbeau <sjbarbeau@gmail.com>
Date:   Wed Jan 15 21:54:48 2014 -0500

    Initial work towards #31 auto-rotate map with compass.  Refactors sensor listener out of GpsSkyFragment and into GpsTestActivity, with all fragments getting orientation updates via GpsTestListener interface.

--- a/GPSTest/build.gradle
+++ b/GPSTest/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:3.2.65'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'org.jraf:android-switch-backport:1.2'
+    compile 'com.google.maps.android:android-maps-utils:0.2.1'
 }
